# simple-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/wizard-ml/linear_algebra/: matrix.py
src/wizardml/: __init__.py
src/wizardml/classifiers/linear_models/: linear_regression.py
src/wizardml/linear_algebra/: matrix.py  vector.py
src/wizardml/linear_models/: linear_regression.py
src/wizardml/math/gradient_descent/: gradient_descent.py
src/wizardml/math/linear_algebra/: __init__.py  matrix.py  vector.py
src/wizardml/math/stats/: bootstrap.py  probability.py  stats.py
src/wizardml/preprocessing/: scaler.py
src/wizardml/stats/: __init__.py  probability.py  stats.py
tests/: test_gradient_descent.py  test_linear_regression.py  test_matrix.py  test_probability.py  test_scaler.py  test_stats.py  test_vector.py
