[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wizard-ml"
version = "0.0.1"
authors = [
  { name="Jon Duesterhoeft", email="jon.duesterhoeft@gmail.com" },
]
description = "Basic Implementation of selected Machine Learning Algorithms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jonduesterhoeft/wizard-ml"
"Bug Tracker" = "https://github.com/jonduesterhoeft/wizard-ml/issues"
